# agentic-perf

./: .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  cli.py  paths.py  pyproject.toml  start.sh
.githooks/: pre-commit  setup-hooks.sh
.github/workflows/: ci.yml
agents/: base.py  jumpstarter_mcp.py  mcp_client.py  server_utils.py  stub.py
agents/benchmark/: agent.py  mcp_server.py  prompts.py  server.py
agents/evaluate/: agent.py  prompts.py  server.py
agents/gathering_context/: agent.py
agents/infra/: command_policy.py  server.py
agents/introspection/: __init__.py  agent.py  server.py  skills.py
agents/investigation/: server.py
agents/provisioning/: agent.py  mcp_server.py  prompts.py  server.py
agents/resource/: agent.py  mcp_server.py  prompts.py  server.py
agents/retrospective/: agent.py  mcp_server.py  prompts.py  server.py
agents/review/: agent.py  mcp_server.py  prompts.py  server.py
docs/: architecture.md  beaker-integration.md  capabilities.md  cdm-api-reference.md  collaborative-negotiation.md  configuration.md  dataflow.md  design-llm-runfile-generation.md  design-philosophy.md  e2e-testing.md  jira-polling-integration.md  monitoring.md  next-session-notes.md  presentation-agentic-perf.md  tui-concept.md  tui-implementation-plan.md  user-guide.md  web-ui-todo.md  web-ui.md
orchestrator/: config.py  dispatcher.py  handoff.py  main.py  poller.py
providers/: budget.py  convergence.py  events.py  fleet.py  ledger.py  psap_cc.py  quads.py  ssh.py  telemetry.py
sample-private-skills/: crucible.json  zathras.json
scripts/: dev-setup.sh  lint.sh  setup-jumpstarter.sh  start-bg.sh  test.sh  validate.sh
state_store/: auth.py  identity.py  main.py  models.py  store.py
tests/: conftest.py  test_agent_iterations.py  test_arcaflow_plugins_provider.py  test_async_suspension.py  test_benchmark_artifacts.py  test_benchmark_runner_provider.py  test_benchmark_tools.py  test_boot_time.py  test_budget_guardrails.py  test_clusterbuster_provider.py  test_command_approval.py  test_command_policy.py  test_convergence_criteria.py  test_cost_estimation.py  test_crucible_provider.py  test_dispatcher_claim.py  test_evaluate_agent.py  test_event_stream.py  test_execute_command.py  test_execution_plan.py  test_external_mcp.py  test_fleet_investigation.py  test_forge_provider.py  test_gathering_context.py  test_handoff.py  test_host_matching.py  test_identity.py  test_infra_mcp.py  test_interject.py  test_introspection.py  test_investigation_composite.py  test_investigation_horreum.py  test_investigation_ledger.py  test_investigation_records.py  test_investigation_tools.py  test_ioscale_provider.py  test_jumpstarter_cleanup.py  test_jumpstarter_mcp.py  test_jumpstarter_provider.py  test_k8s_netperf_provider.py  (+30 more)
(+125 files in other folders)
