[project]
name = "agentic-perf"
version = "0.1.0"
description = "Multi-agent performance testing automation prototype"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "httpx>=0.27.0",
    "anthropic>=0.40.0",
    "pyyaml>=6.0",
    "mcp>=1.0.0",
    "fastmcp>=2.0.0",
]

[tool.setuptools.packages.find]
include = ["agents*", "orchestrator*", "providers*", "state_store*"]

[project.optional-dependencies]
openai = [
    "openai>=1.0.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
]
