[project]
name = "agentic-perf"
version = "0.1.0"
description = "Multi-agent performance testing automation prototype"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "httpx>=0.27.0",
    "anthropic>=0.40.0",
    "pyyaml>=6.0",
    "mcp>=1.0.0",
    "fastmcp>=2.0.0",
]

[tool.setuptools.packages.find]
include = ["agents*", "orchestrator*", "providers*", "state_store*"]

[project.optional-dependencies]
openai = [
    "openai>=1.0.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0",
    "ruff>=0.11.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["agents", "orchestrator", "providers", "state_store"]
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
show_missing = true
skip_empty = true
# Baseline is ~41%. Increase as coverage improves.
fail_under = 40

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = [
    # E402: module-level import not at top — some files need sys.path
    # manipulation before imports (e.g., MCP servers adding project root).
    "E402",
    # E501: line too long — ruff format handles most cases; remaining are
    # string literals in tool descriptions and test data. Tighten later.
    "E501",
]

[tool.ruff.lint.isort]
known-first-party = ["agents", "orchestrator", "providers", "state_store"]
